Get Kojo going with Java 11.